lager-lang/examples/good/global_variables.lg
int x = 3;
int y = x + 2;

void f(int &x) {
    x = x * 2;
}

int main() {
    print(x); // 3
    print(y); // 5
    
    f(x);
    f(y);
    
    print(x); // 6
    print(y); // 10
    
    return 0;
}
