lager-lang/examples/bad/ref_arg_expr.lg
void f(int &x) {
    x = x + 1;
}

int main() {
    int a = 1;
    int b = 2;
    f(a + b); // compile error
    
    return 0;
}
